New dl works! setup works, make works

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
 kagEnv
 archive
 kl.egg-info
+kli/classes2.py
+kli/main2.py
+kli/support2.py
+kli/main-Copy1.py
+kli/__pycache__/classes2.cpython-34.pyc
+kli/__pycache__/support2.cpython-34.pyc
+kli/.ipynb_checkpoints
