Commit before merge to master

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ kli/main-Copy1.py
 kli/__pycache__/classes2.cpython-34.pyc
 kli/__pycache__/support2.cpython-34.pyc
 kli/.ipynb_checkpoints
+tests.py
